2017-10-10  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/opevassd.c (stop_all_scans): Do not get the group process ID.
	Set the char array size to 8.

2017-10-10  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/opevassd.c (stop_all_scans): Evaluate the return code from
	the first fscanf () call.

	* Changelog: Correct log entry email.

2017-10-09  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/attack: Remove error type ERR_REDIS_CONN.
	(launch_plugin, attack_host): Remove handling of redis error.

2017-10-09  Juan Jose Nicola  <juan.nicola@greenbone.net>

	In case of redis error, the scanner detects it and send the SIGUSR2
	signal to all the running scans.

	* src/opevassd.c (stop_all_scans): New function.
	(check_kb_status): Call stop_all_scans().

	* src/attack.c: New variable global_stop_all_scans.
	(all_scans_are_stopped): New function.
	(launch_plugin, attack_star): Call all_scans_are_stopped().
	(attack_host): Do not send error message to the client. Call
	all_scans_are_stopped().
	(handle_stop_all_scans_signal): New function.
	(attack_network): Set SIGUSR2 signal handler. Call
	all_scans_are_stopped().

2017-10-09  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (mark_successful_plugin): Remove useless function.
	(proto_post_wrapped): Don't call removed function.

2017-10-06  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (attack_start_args): Remove hostip and fqdn elements.
	(attack_network, attack_start): Move hostname resolving and reverse
	resolving from main scan process to the spawned host process.

2017-10-05  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/pcap.c (v6_get_mac_addr): Remove function.

	* misc/pcap_openvas.h: Remove function header.

	* src/attack.c (struct attack_start_args): Remove host_mac_addr element.
	(attack_start): Remove host_mac_addr check.
	(attack_network): Remove handling of unused use_mac_addr preference.
