@@ -1,3 +1,8 @@
+2017-10-11  Juan Jose Nicola  <juan.nicola@greenbone.net>
+
+	* src/opevassd.c (stop_all_scans): Remove popen() and get the pids
+	reading the /proc directory.
+
 2017-10-10  Juan Jose Nicola  <juan.nicola@greenbone.net>
 
 	* src/opevassd.c (stop_all_scans): Do not get the group process ID.
